gregdo de comentarios

--- a/dags_dinamicos/dags_config.json
+++ b/dags_dinamicos/dags_config.json
@@ -1,9 +1,6 @@
 
 
 
-
-
-
 {"Config_1":[{  "owner": "airflow",
     "depends_on_past": "False",
     "email_on_failure": "False",
@@ -25,9 +22,22 @@
         "retry_delay": "timedelta(seconds=30)",
     
         "start_date":"2020,4,4",
-        "max_active_runs": "8",
-        "schedule_interval": "@hourly",
+        "max_active_runs": "5",
+        "schedule_interval": "@minutely",
         "template_searchpath": "f'{path}/airflow/include",
-        "catchup":"False"}]
+        "catchup":"False"}],
+
+"Config_3":[{  "owner": "airflow",
+    "depends_on_past": "False",
+    "email_on_failure": "False",
+    "email_on_retry": "False",
+    "retries": "1",
+    "retry_delay": "timedelta(seconds=30)",
+
+    "start_date":"2020,4,4",
+    "max_active_runs": "15",
+    "schedule_interval": "@dialy",
+    "template_searchpath": "f'{path}/airflow/include",
+    "catchup":"False"}]
+
 }
-             
