--- a/bigdata/data_group_E/logging.cfg
+++ b/bigdata/data_group_E/logging.cfg
@@ -24,6 +24,6 @@ formatter=formatter_log
 args=('OT172-python/bigdata/logging/log_grupo_E.log','W0')
 
 [formatter_formatter_log]
-format=%(asctime)s %(levelname)s %(message)s
-datefmt=%d-%b-%Y
+format=%(asctime)s.%(levelname)s.%(name)s.%(message)s
+datefmt=%d/%b/%Y
 class=logging.Formatter
